[gd_scene load_steps=2 format=3 uid="uid://cak6p4nx7qwer"]

[ext_resource type="Script" path="res://scenes/ui/screens/HospitalScreen.gd" id="1_hospital"]

[node name="HospitalScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hospital")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBox" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="MarginContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Hastane"
theme_override_font_sizes/font_size = 40
theme_override_colors/font_color = Color(1, 1, 1, 1)
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBox"]
layout_mode = 2

[node name="StatusPanel" type="PanelContainer" parent="MarginContainer/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 200)

[node name="StatusVBox" type="VBoxContainer" parent="MarginContainer/VBox/StatusPanel"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="ReasonLabel" type="Label" parent="MarginContainer/VBox/StatusPanel/StatusVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Hastanelik Sebebi"
theme_override_font_sizes/font_size = 24
theme_override_colors/font_color = Color(1, 0.8, 0.2, 1)

[node name="ReleaseTimeLabel" type="Label" parent="MarginContainer/VBox/StatusPanel/StatusVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Taburcu Tarihi: HesaplanÄ±yor..."
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(0.8, 1, 0.8, 1)

[node name="CountdownLabel" type="Label" parent="MarginContainer/VBox/StatusPanel/StatusVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Kalan SÃ¼re: HesaplanÄ±yor..."
theme_override_font_sizes/font_size = 22
theme_override_colors/font_color = Color(1, 1, 1, 1)
horizontal_alignment = 1

[node name="GemCostLabel" type="Label" parent="MarginContainer/VBox/StatusPanel/StatusVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Elmas ile Ã‡Ä±k: 0ðŸ’Ž"
theme_override_font_sizes/font_size = 20
theme_override_colors/font_color = Color(0.4, 0.8, 1, 1)
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="MarginContainer/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="ButtonsVBox" type="VBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ReleaseGemsButton" type="Button" parent="MarginContainer/VBox/ButtonsVBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
text = "ðŸ’Ž Elmas ile Ã‡Ä±k"
theme_override_font_sizes/font_size = 20

[node name="BackButton" type="Button" parent="MarginContainer/VBox/ButtonsVBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
text = "Geri"
theme_override_font_sizes/font_size = 18
